--- a/home/index.css
+++ b/home/index.css
@@ -1,5 +1,6 @@
 /* Basic Blocks Custom App */
 @import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre');
+@import url('/font-awesome-4.6.3/css/font-awesome.min.css');
 
 /*-----------------------------------------
 :root selector for variables
@@ -11,7 +12,7 @@
     --HeaderLogo_margin: 0px 0 0 50px;
     --HeaderList-font-size: 1.1rem;
   
-    --Section1_background-color: whitesmoke;
+    --Section1_background-color: cornflowerblue;
     --Section1_background-image: url( 'assets/images/monaco-blue-soft-1.jpg' );
     --Section1Paragraph-font-color: whitesmoke;  
   
@@ -21,16 +22,30 @@
   
     --Footer_background-color:whitesmoke; 
     --Footer_hover-color: blue;
-    --FooterList-font-size: .9rem;  
+    --FooterListFontSize: .9rem;  
     
-    --GlobalFontFamily: "Frank+Ruhl+Libre";
-} 
+    /*--GlobalFontFamily: "Roboto Slab";*/
+    --GlobalFontFamily: "Frank Ruhl Libre";
+    
+    --CalloutIconCheck: "\f14a  \A"; /*checkbox*/
+    --CalloutIconCheck: "\f0da  \A"; /*Right Arrow*/
+    --CalloutIconCheck: "\f0a4  \A"; /*Right Hand Pointer*/
+    --CalloutIconCheck: "\f105  \A"; /*Right Arrow*/
+    --CalloutIconCheck: "\f328  \A"; /*Clip Board*/
+    --CalloutIconCheck: "\f0ca  \A"; /*Bullets {<li>}*/
+    --CalloutIconCheck: "\f064  \A"; /*Forward Arrow*/
+    --CalloutIconCheck: "\f0ae  \A"; /*ToDo List*/
+    --CalloutIconCheck: "\f35a  \A"; /*Right Arrow in Circles*/
+    --CalloutIconFontFamily: "Font Awesome 5 Free";    
 
+} 
+/*------------------------------------------*/
 * {                   /* reset all style */
     box-sizing          :  border-box;
     padding             :  0;
     margin              :  0;
     font-family         :  var(--GlobalFontFamily);
+    font-size           :  1rem;
     }
 
 .container {            /* custom element style */
@@ -40,11 +55,15 @@
     height              :  100vh;
     } 
 
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
 /*-----------------------------------------
 The .Header properites
 ------------------------------------------*/
 .Header {
     background: var(--Header_background-color);
+    border-bottom: 1px #000 solid;
     width: 100%;
     height: 10%;
     position: fixed;  /*was relative*/
@@ -53,12 +72,7 @@ The .Header properites
     justify-content: space-between;
     align-items: center;
 }
-/* END HR-1 .Header =====================*/
-
-
-/*-----------------------------------------
-The .HeaderNavBars (hamburger menu) properites
-------------------------------------------*/
+/*------------------------------------------*/
 .HeaderNavBars {
     display: none;
     height: 24px;
@@ -71,22 +85,11 @@ The .HeaderNavBars (hamburger menu) properites
     margin-left: 20px;
     margin-top: 0px;
   }
-  
-  /*-----------------------------------------
-  The .HeaderNavBars:focus properites
-  ------------------------------------------*/
-  .HeaderNavBars:focus {
+/*------------------------------------------*/
+.HeaderNavBars:focus {
       outline: none;
   }
-  /* H-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  
-
-/*===============================================*/
-/* H-2 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/*=======================================*/
-/*-----------------------------------------
-The .HeaderLogo properites
-------------------------------------------*/
+/*------------------------------------------*/
 .HeaderLogo {
     width: 224px;
     height: 64px;
@@ -98,19 +101,15 @@ The .HeaderLogo properites
     font-size: 25px;
     font-weight: 600;
   }
-  
-  /*-----------------------------------------
-  The .HeaderSpacer properites
-  ------------------------------------------*/
-  .HeaderSpacer {
+/*------------------------------------------*/
+.HeaderSpacer {
       flex: 1;
   }
-  /* H-2 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* Header END^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
   
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
-/*==============================================*/
-/* H-3 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/*========================================*/
 /*-----------------------------------------
 The .HeaderNavList (horizontal menu) properites
 ------------------------------------------*/
@@ -123,10 +122,7 @@ The .HeaderNavList (horizontal menu) properites
     align-items: center;
     font-size: var(--HeaderList-font-size);
 }
-
-/*-----------------------------------------
-The .HeaderNavListItem a properites
-------------------------------------------*/
+/*------------------------------------------*/
 .HeaderNavListItem a {
     color: black;
     font-weight: bold;
@@ -134,48 +130,42 @@ The .HeaderNavListItem a properites
     margin: 8px 0;
     padding: 25px;
 }
-
-/*-----------------------------------------
-The .HeaderNavListItem a properites
-------------------------------------------*/
+/*------------------------------------------*/
 .HeaderNavListItem a:hover,
 .HeaderNavListItem a:active {
     color: var(--Header_hover-color);
 }
-/* H-3 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-
-
-/*-----------------------------------------
-The .HeaderNavListItemCTA a properties
-------------------------------------------*/
+/*------------------------------------------*/
 .HeaderNavListItemCTA a {
     color: white;
     background: blue ;
     padding: 0.5rem 1rem;
     border-radius: 8px;
 }
-/* END H-4 .HeaderNavListItemCTA a ======*/
-
-
-/*===========================================*/
-/* H-5 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/*-----------------------------------------
-The .HeaderNavListItemCTA properties
-------------------------------------------*/
+/*------------------------------------------*/
 .HeaderNavListItemCTA {
     animation     : wiggle 400ms 2s 8 ease-out none;
     }
   
-  /*-----------------------------------------
-  The @keyframes wiggle properties
-  ------------------------------------------*/
+/*-----------------------------------------
+The @keyframes wiggle properties
+------------------------------------------*/
   @keyframes wiggle {
       0% { transform: rotateZ(  0deg ); }
      50% { transform: rotateZ(-10deg ); }
     100% { transform: rotateZ( 10deg ); }
   }
-  /* H-5 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* Header Nav END ^^^^^^^^^^^^^^^^^^^^^^^^^^*/
   
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.Logo {
+  padding: 0px 0px 10px 0px;
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 /*-----------------------------------------
 The .Section1 properites
@@ -186,50 +176,36 @@ The .Section1 properites
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    border-bottom: 1px black solid;
     width: 100%;
-    height: 46%;
+    height: 30%;
     position: relative;
     top: 10%;
+    overflow: auto;
 }
-/* END S1R-1 .Section1 =====================*/
-
-
-/*===========================================*/
-/* S1-1 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/*=======================================*/
-/*-----------------------------------------
-The .Section1ImageText properties
-------------------------------------------*/
+/*------------------------------------------*/
 .Section1Title {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bolder;
     color: lightgray;
     text-shadow: 1px 1px 3px #000000;
     text-align: left; 
-    padding-left: 4rem; 
+    padding-left: 1.3rem; 
   }
-
-/*-----------------------------------------
-The .Section1ImageText::first-letter properties
-------------------------------------------*/
+/*------------------------------------------*/
 .Section1Title::first-letter {
-    font-size: 150%;
+    font-size: 130%;
 }
-
-/*-----------------------------------------
-The .Section1Paragraph properites
-------------------------------------------*/
+/*------------------------------------------*/
 .Section1Paragraph {
-  margin-top: 0px;
-  font-size: 1.3rem;
-  font-weight: bolder;
-  padding-top: 1rem;
-  padding: 50px 150px 20px 30px;
-  color: var(--Section1Paragraph-font-color); 
+  margin: 10px 20px 0px 40px;
+  font-size: 1rem;
+  font-weight: 600;
 }
+/* Section-1 END ^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
-/* S1-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 /*-----------------------------------------
 The .Section2 properites
@@ -237,44 +213,71 @@ The .Section2 properites
 .Section2 {
     background: var(--Section2_background-color);
     width: 100%;
-    height: 46%;
+    height: 60%;
     position: relative;
     color: var(--Section2-font-color);
     top:10%; /*<---ADD to adjust the top position*/
-}
-/* END S2R-1 .Section2 =====================*/
-
-
-/*-----------------------------------------
-The .Section2 h2 properites
-------------------------------------------*/
+    overflow: auto;
+  }
+/*------------------------------------------*/
 .Section2Title {
-  font-size: 2.2rem;
-  font-weight: bolder;
-  text-shadow: 1px 1px 3px #000000;
-  font-weight: bolder;
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: blue;
   text-shadow: 1px 1px 3px #000000;
   text-align: left; 
-  padding-left: 4rem; 
-  }
-/* END S2-1 .Section2 h2==================*/
-
-
-/*-----------------------------------------
-The .Section2Paragraph properites
-------------------------------------------*/
+  padding-left: 1.6rem; 
+}
+/*------------------------------------------*/
+.Section2Title::first-letter {
+  font-size: 130%;
+}
+/*------------------------------------------*/
 .Section2Paragraph {
-    margin-top: 0px;
-    font-size: 1.3rem;
-    font-weight: bolder;
-    padding: 5px 120px 10px 30px;
+    margin: 0px 20px 0px 65px;
+    font-size: .9rem;
+    font-weight: 600;
   }
+/*------------------------------------------*/
+.Section2Paragraph ul {
+    list-style-type: none;
+    margin: 5px 0px 5px 10px;
+    font-size: .9rem;
+    columns: 3;
+    -webkit-columns: 3;
+    -moz-columns: 3;
+    text-decoration: none;
+    border-bottom: 1px #333 dotted;
+/*    column-rule: dotted 1px #333;*/
 
-/*-----------------------------------------
-The .Section2Paragraph::firstLetter/line properites
-------------------------------------------*/
-/* S2-2 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+  }
+/*------------------------------------------*/
+.Section2Paragraph ul li:before { 
+    font-family: var(--CalloutIconFontFamily);
+    font-weight: 600;
+    content: var(--CalloutIconCheck); /*checkbox*/ 
+    margin-left: 0px; 
+    margin-right: 0px;
+    padding: 0px 0px 0px 10px; 
+  } 
+/*------------------------------------------*/  
+  .Section2Paragraph a {
+    color: black;
+    font-size: .85rem;
+    font-weight: 600;
+    text-decoration: none;
+    margin: 8px 0;
+    padding: 2px;
+}
+/*------------------------------------------*/
+  ul a:hover,
+  ul a:active {
+    color: var(--Footer_hover-color);
+  }  
+/* Section2 END ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 /*-----------------------------------------
 The .Footer properites
@@ -282,17 +285,13 @@ The .Footer properites
 .Footer {
     background: var(--Footer_background-color);
     width: 100%; 
-    /*top: 10%;  Removed in place of the bottom property*/
+    /*top: 10%;  /*Removed in place of the bottom property*/
+    border-top: 1px solid black;
     bottom: 0;
     position: fixed;
     z-index: 99;
   } 
-/* END FR-1 .Footer =====================*/
-
-
-/*-----------------------------------------
-The .FooterNavList properties
-------------------------------------------*/
+/*------------------------------------------*/
 .FooterNavList {
     list-style: none;
     margin: 20px;
@@ -300,69 +299,165 @@ The .FooterNavList properties
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-size: var(--FooterList-font-size);
 }
-
-/*-----------------------------------------
-The .FooterNavListItem a properties
-------------------------------------------*/
+/*------------------------------------------*/
 .FooterNavListItem a {
     color: black;
     font-weight: bold;
+    font-size: var(--FooterListFontSize);
     text-decoration: none;
     margin: 8px 0;
     padding: 12px;
 }
-
-/*-----------------------------------------
-The .FooterNavListItem a:hover,
-    .FooterNavListItem a:active properties
-------------------------------------------*/
+/*------------------------------------------*/
 .FooterNavListItem a:hover,
 .FooterNavListItem a:active {
   color: var(--Footer_hover-color);
 }
-/* F-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* Footer END ^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 /* Responsive Code */  
-/*-----------------------------------------
-The @media MIN-width query properties
+/*The @media MIN-width query properties
+***** EXTRA LARGE
 =========================================*/
-@media (min-width: 760px) {
-  .HeaderNavBars {
-    display: none;
-  }
-  .HeaderLogo {
-    margin-left: 45px;
-  }
-}
+@media only screen and (min-width: 1200px) {
+
+  /*@media (max-width: 1000px) {*/
+    /*.Section1 {
+      background-color: green;
+    }*/
+    .Section1Paragraph {
+      font-size: 125%;
+    } 
+  }  
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 /*-----------------------------------------
 The @media MAX-width query properties
+***** IPAD
 =========================================*/
+@media only screen and (max-width: 860px) {
 
-@media (max-width: 760px) {
+/*@media (max-width: 760px) {*/
+  /*.Section1 {
+    background-color: purple;
+  }*/ 
   .HeaderNavList {
       display: none;
   }
+  .HeaderNavBars {
+      display: flex;
+  }
   .HeaderLogo {
       font-size: 1rem;
-    }    
+      margin-left: 45px;
+  }   
   .Section1Title {
-    font-size: 1.5rem;
-    padding: 80px 100px 20px 0px;
+    font-size: 2rem;
+    padding: 5px 10px 0px 20px;
   }
   .Section1Paragraph {
-    font-size: 75%;
+    font-size: 105%;
   }
   .Section2Title {
-    font-size: 1.5rem;
-    padding: 80px 100px 20px 0px;
+    font-size: 2rem;
+    text-shadow: 1px 1px 2px #000000;
+    padding: 5px 10px 0px 22px;
   }
-  .Section2Paragraph {
-    font-size: 75%;
+  .Section2Paragraph ul {
+    font-size: 110%;
+    margin: 5px 0px 10px 10px;
+    columns: 3;
+    -webkit-columns: 3;
+    -moz-columns: 3;  
   }
+  .Section2Paragraph li {
+    font-size: 90%;
+  }
+  .Section2Paragraph a {
+    font-size: 90%;
+    font-weight: 600;
+    margin: 8px 0;
+    padding: 2px;
+  }
+  .FooterNavListItem a {
+    font-size: 95%;
+  }
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+/*-----------------------------------------
+The @media MIN-width query properties
+IPHONE *****
+=========================================*/
+@media only screen and (max-width: 420px) {
+/*@media (min-width: 420px) {*/
+/*  .Section1 {
+    background-color: pink;
+}*/
+  .HeaderNavList {
+    display: none;
+}
+.HeaderNavBars {
+    display: flex;
+}
+  .HeaderLogo {
+    font-size: 1rem;
+    margin-left: 45px;
+}
+.Section1Title {
+  font-size: 120%;
+  text-align: center;
+}
+.Section1Paragraph {
+  font-size: 85%;
+}
+.Section2 {
+  height: 60%; 
+}
+.Section2Title {
+  font-size: 120%;
+  text-align: center;
+  text-shadow: 1px 1px 1px #000000;
+}
+.Section2Paragraph {
+  font-size: 0%;
+  padding-left: 15px;
+}
+.Section2Paragraph ul {
+  margin: 0px 0px 5px -10px;
+  font-size: 90%;
+  columns: 2;
+  column-rule: none;
+  border-bottom: none;
+}
+.Section2Paragraph li {
+  font-size: 90%;
+  margin: 0 0 0 -45px;
+}
+.Section2Paragraph a {
+  font-size: 90%;
+  font-weight: 600;
+  margin: px 0;
+  padding: 2px;      
+}
+.Footer {
+  position: sticky;
+  bottom: 0;
+  margin-top: 30px;
+  border-top: 0px solid var(--Footer_background-color);
+  align-items: baseline;
+}      
+.FooterNavListItem a {
+  font-size: 70%;
+}
 }
 
 /* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
